--- a/public/now.json
+++ b/public/now.json
@@ -8,6 +8,10 @@
         {
             "src": "/.*",
             "dest": "/index.html"
+        },
+        {
+            "src": "/favicon.ico",
+            "dest": "/favicon.ico"
         }
     ]
 }
